# AppTrace

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: windows-release.yml
lib/: main.dart
lib/config/: update_config.dart
lib/database/: database.dart  repository.dart
lib/models/: activity_event.dart
lib/services/: activity_service.dart  export_service.dart  icon_service.dart  native_bridge.dart  startup_service.dart  tray_service.dart  update_service.dart  window_close_service.dart  windows_icon_service.dart
lib/ui/screens/: dashboard_screen.dart  settings_screen.dart
lib/ui/widgets/: controls_widget.dart  custom_title_bar.dart  timeline_widget.dart  top_apps_widget.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc
windows/installer/: apptrace.iss  build-installer.ps1
windows/runner/: Runner.rc  main.cpp
windows/runner/plugins/app_trace_native/: pubspec.yaml
windows/runner/plugins/app_trace_native/windows/: CMakeLists.txt  activity_monitor.cpp  app_trace_native_plugin.cpp
windows/runner/plugins/app_trace_native/windows/include/: activity_monitor.h
windows/runner/plugins/app_trace_native/windows/include/app_trace_native/: app_trace_native_plugin.h
